syntax="proto3";

package user;

option java_multiple_files = true;
option java_package = "in.foresthut.impact.models.user";


message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string profile_photo_url = 4;
  string id_token = 5;
}

message SignInRequest {
  User user = 1;
}

message SignInResponse {
  string session_token = 1;
}

message GetUserRequest {
  string user_id = 1;
}

service UserService {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc getUser(GetUserRequest) returns (User);
}